# GSpecTools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: gauss_spectrum.py
src/besiege/: __init__.py
src/besiege/reconstruction/: analysis_functions.py  cross_sections.py  spectrum.py
src/gspectools/reconstruction/: analysis_functions.py  spectrum.py
src/reconstruction/: analysis_functions.py  cross_sections.py  spectrum.py
tests/reconstruction/: test_cross_sections.py  test_functions.py  test_spectrum.py
