[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gspectools"
version = "0.0.1"
authors = [
  {name="K. Fleck", email="kfleck02@qub.ac.uk"},
]
description = "Tools for Bayesian reconstruction of photon spectra."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: GNU General Public License v3.0"
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.optional-dependencies]
test = ["pytest", "coverage"]
typing = ["mypy"]
linting = ["black"]

[project.urls]
Homepage = "https://github.com/k-fleck-01/GSpecTools"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]
pythonpath = ["src"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
